[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/PlayerShip.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/PowerUp.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Boss1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Art/GUI/playerLife1_blue.png" type="Texture" id=6]
[ext_resource path="res://Art/Fonts/Kenney Blocks.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Art/GUI/play.png" type="Texture" id=8]
[ext_resource path="res://Art/GUI/pause.png" type="Texture" id=9]
[ext_resource path="res://Art/GUI/home.png" type="Texture" id=10]
[ext_resource path="res://Art/GUI/yes.png" type="Texture" id=11]
[ext_resource path="res://Art/GUI/no.png" type="Texture" id=12]
[ext_resource path="res://Art/GUI/sfx_on.png" type="Texture" id=13]
[ext_resource path="res://Art/GUI/sfx_off.png" type="Texture" id=14]
[ext_resource path="res://Art/PowerUps/Escudo.png" type="Texture" id=15]
[ext_resource path="res://Art/PowerUps/Multishot.png" type="Texture" id=16]
[ext_resource path="res://Art/PowerUps/Roketluncher.png" type="Texture" id=17]
[ext_resource path="res://Art/PowerUps/FondoPowerup.png" type="Texture" id=18]
[ext_resource path="res://Art/Background/fondo1.png" type="Texture" id=21]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 7 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": false,
"name": "play",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": false,
"name": "pause",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": false,
"name": "home",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 14 ) ],
"loop": false,
"name": "sfx_off",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": false,
"name": "sfx_on",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "shield",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": false,
"name": "stair",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "rocket",
"speed": 5.0
} ]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}
Enemy = ExtResource( 2 )
PLAYER = ExtResource( 3 )
PowerUp = ExtResource( 4 )
Boss1 = ExtResource( 5 )

[node name="BG" type="Node2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="BG"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="BG/ParallaxBackground"]
motion_mirroring = Vector2( 0, 3838 )

[node name="Sprite" type="Sprite" parent="BG/ParallaxBackground/ParallaxLayer"]
position = Vector2( 360, 200 )
texture = ExtResource( 21 )

[node name="Lifes" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Life1" type="Sprite" parent="Lifes"]
position = Vector2( 100, 65 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="Life2" type="Sprite" parent="Lifes"]
position = Vector2( 170, 65 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="Life3" type="Sprite" parent="Lifes"]
position = Vector2( 240, 65 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="Score" type="Label" parent="."]
margin_left = 520.0
margin_top = 25.0
margin_right = 634.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 1 )
text = "100"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ninjaSpawn" type="Timer" parent="."]
wait_time = 0.7
autostart = true

[node name="ShooterTimer" type="Timer" parent="."]
wait_time = 6.0

[node name="UfoTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="PowerUpTimer" type="Timer" parent="."]
wait_time = 13.0
one_shot = true
autostart = true

[node name="GameOverTimer" type="Timer" parent="."]
pause_mode = 2
wait_time = 4.0
one_shot = true

[node name="Buttons" type="Control" parent="."]
margin_top = 1150.0
margin_right = 40.0
margin_bottom = 1190.0

[node name="pause_menu" type="Button" parent="Buttons"]
pause_mode = 2
margin_left = 560.0
margin_right = 608.0
margin_bottom = 48.0
rect_scale = Vector2( 2, 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pauseBtt" type="AnimatedSprite" parent="Buttons/pause_menu"]
z_index = 3
frames = SubResource( 2 )
animation = "pause"
centered = false

[node name="home" type="Button" parent="Buttons/pause_menu"]
visible = false
margin_top = -140.0
margin_right = 48.0
margin_bottom = -92.0
flat = true

[node name="Home" type="AnimatedSprite" parent="Buttons/pause_menu/home"]
z_index = 3
frames = SubResource( 3 )
animation = "home"
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Button_yes" type="Button" parent="Buttons/pause_menu/home"]
visible = false
margin_left = -70.0
margin_right = -22.0
margin_bottom = 48.0
flat = true

[node name="yes" type="Sprite" parent="Buttons/pause_menu/home/Button_yes"]
z_index = 3
texture = ExtResource( 11 )
centered = false

[node name="Button_no" type="Button" parent="Buttons/pause_menu/home"]
visible = false
margin_left = -140.0
margin_right = -92.0
margin_bottom = 48.0
flat = true

[node name="no" type="Sprite" parent="Buttons/pause_menu/home/Button_no"]
z_index = 3
texture = ExtResource( 12 )
centered = false

[node name="sfx" type="Button" parent="Buttons/pause_menu"]
visible = false
margin_top = -70.0
margin_right = 48.0
margin_bottom = -22.0
flat = true

[node name="sfx" type="AnimatedSprite" parent="Buttons/pause_menu/sfx"]
z_index = 3
frames = SubResource( 4 )
animation = "sfx_on"
centered = false

[node name="Powers" type="Control" parent="Buttons"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Power1" type="Button" parent="Buttons/Powers"]
margin_left = 40.0
margin_right = 100.0
margin_bottom = 60.0
rect_scale = Vector2( 1.5, 1.5 )
flat = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="Buttons/Powers/Power1"]
frames = SubResource( 5 )
animation = "stair"
centered = false

[node name="Sprite" type="Sprite" parent="Buttons/Powers/Power1"]
position = Vector2( -6.14424, -4.37238 )
scale = Vector2( 0.899892, 0.876673 )
z_index = -1
texture = ExtResource( 18 )
centered = false

[node name="Power2" type="Button" parent="Buttons/Powers"]
margin_left = 200.0
margin_right = 260.0
margin_bottom = 60.0
rect_scale = Vector2( 1.5, 1.5 )
flat = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Buttons/Powers/Power2"]
frames = SubResource( 5 )
animation = "stair"
centered = false

[node name="Power3" type="Button" parent="Buttons/Powers"]
margin_left = 350.0
margin_right = 410.0
margin_bottom = 60.0
rect_scale = Vector2( 1.5, 1.5 )
flat = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="Buttons/Powers/Power3"]
frames = SubResource( 5 )
animation = "stair"
centered = false
[connection signal="timeout" from="ninjaSpawn" to="." method="_on_ninjaSpawn_timeout"]
[connection signal="timeout" from="ShooterTimer" to="." method="_on_ShooterTimer_timeout"]
[connection signal="timeout" from="UfoTimer" to="." method="_on_UfoTimer_timeout"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_PowerUpTimer_timeout"]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_GameOverTimer_timeout"]
[connection signal="pressed" from="Buttons/pause_menu" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="Buttons/pause_menu/home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="Buttons/pause_menu/home/Button_yes" to="." method="_on_Button_yes_pressed"]
[connection signal="pressed" from="Buttons/pause_menu/home/Button_no" to="." method="_on_Button_no_pressed"]
[connection signal="pressed" from="Buttons/pause_menu/sfx" to="." method="_on_sfx_pressed"]
[connection signal="pressed" from="Buttons/Powers/Power2" to="." method="_on_Power2_pressed"]
[connection signal="pressed" from="Buttons/Powers/Power3" to="." method="_on_Power3_pressed"]
